<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ExpandChildBackground"
>
  <TextView
    android:id="@+id/facebook_text"
    android:text="@string/facebook_text"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:autoLink="web"
     android:linksClickable="true"
 /> 
 
<TextView
    android:id="@+id/facebook_page"
    android:text="@string/facebook"
    android:layout_below="@+id/facebook_text"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:autoLink="web"
     android:linksClickable="true"
 /> 
 
<TextView
    android:id="@+id/twitter_page"
    android:text="@string/twitter"
    android:layout_below="@+id/facebook_page"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:autoLink="web"
     android:linksClickable="true"
 /> 
 

 <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter_page"
        android:textSize="15sp"
        android:gravity="left"
        android:hint="@string/hint_name" 
        android:inputType="text"
        android:imeOptions="actionDone" />

  <EditText
        android:id="@+id/email"
        android:layout_below="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="left"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:imeOptions="actionDone" />
  
  <EditText
        android:id="@+id/country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:textSize="15sp"
        android:gravity="left"
        android:hint="@string/hint_country" 
        android:inputType="text"
        android:imeOptions="actionDone" />
  
   <EditText
        android:id="@+id/feedback"
        android:layout_below="@+id/country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="left"
        android:hint="@string/hint_feedback" 
        android:inputType="text"
        android:imeOptions="actionDone"/>
   
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/feedback"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
         />
   

    <com.google.android.gms.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="ca-app-pub-6367763273676349/9978377913"
                         android:layout_alignParentBottom="true"
                         android:layout_below="@+id/btn_submit"
                         ads:adSize="BANNER"                         
                         />
    

</RelativeLayout>            

