<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#CEFAC6"
    android:layout_height="match_parent" >
    
    <!-- android:background="@drawable/search" -->
     
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="24dp"
        android:text="@string/search" />
           <!--android:onClick="onClick1"-->
    

    <AutoCompleteTextView
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"    
        android:ems="10"
        android:hint="@string/search_hint"
        android:completionThreshold="1"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:id="@+id/bhajan_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_bhajan" />

        <RadioButton
            android:id="@+id/raaga_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_raaga" />
        
        <RadioButton
            android:id="@+id/deity_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_deity" />
    </RadioGroup>
    

                         <!-- android:layout_marginTop="50dp" -->
 
</RelativeLayout>