<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >
<AutoCompleteTextView android:id="@+id/myautocomplete"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:completionThreshold="1"
/>
<RadioGroup android:layout_width="fill_parent"
android:layout_height="wrap_content" android:orientation="vertical"
android:id="@+id/radiogroup">
<RadioButton android:id="@+id/radiobutton1"
android:layout_width="wrap_content" android:layout_height="wrap_content"
android:text="@string/search_raaga" >
</RadioButton>
<RadioButton android:id="@+id/radiobutton2" android:layout_width="wrap_content"
android:layout_height="wrap_content" android:text="@string/search_bhajan"></RadioButton>
</RadioGroup>

<Button
    android:id="@+id/button1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/search" />

</LinearLayout>