<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#CEFAC6">
        
     <ListView
        android:id="@+android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="90dp" />
        
         <ExpandableListView
                android:id="@+id/ExpList"
                android:layout_height="230dp"
                android:layout_width="fill_parent"
                android:groupIndicator="@null" />   
          
           <SeekBar
    android:id="@+id/seekBar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp" /> 
     

 <LinearLayout   
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp" 
         android:gravity="center_horizontal"
    android:orientation="horizontal" >
 <Button
        android:id="@+id/btn_play"
        android:layout_width="80dp"
        android:layout_height="wrap_content" 
        android:text="@string/play" />
        
  <Button        
        android:id="@+id/btn_fav"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/favorite" />
  
  <Button        
        android:id="@+id/btn_search"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/search" />
</LinearLayout>       
</LinearLayout>

