<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#CEFAC6">
   
    <TextView
        android:id="@+id/text2"
        android:text="@string/list_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"     
    />
    
    <com.google.android.gms.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/text2"
                         ads:adUnitId="ca-app-pub-6367763273676349/9142603115"
                         ads:adSize="BANNER"                         
                         />
     
    <TextView
        android:id="@+id/text1"
        android:text="@string/click_on_fav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"     
        android:layout_below="@+id/adView"   
        android:textSize="18sp"     
    />
    
    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:text="@string/back_to_search_page" />
    <ListView
        android:id="@android:id/list"
        android:layout_below="@+id/btn_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />   
        

 
    
</RelativeLayout>

